--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MoveElem</title>
+  <title>Game Goblin</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>MoveElem</h1>
+    <h1 class="title">Game Goblin</h1>
+    <p>Количество очков: <span class="count_point"></span></p>
     <ul class="grid">
       <li class="grid__elem"></li>
       <li class="grid__elem"></li>
